--- a/src/server/package.json
+++ b/src/server/package.json
@@ -12,7 +12,9 @@
     "debug": "^0.8.0",
     "static-favicon": "^1.0.2",
     "jsonwebtoken": "^0.3.0",
-    "express-jwt": "^0.1.3"
+    "express-jwt": "^0.1.3",    
+    "bluebird": "^3.4.7",
+    "pg-promise": "^5.5.8"
   },
   "paths": {
       "api": "/api",
