--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "data": "/data/"
   },
   "dependencies": {
-    "serve-favicon": "^2.1.2"
+    "serve-favicon": "^2.1.2",    
+    "bluebird": "^3.4.7",
+    "pg-promise": "^5.5.8"
   }
 }
